--- a/css/old.css
+++ b/css/old.css
@@ -195,13 +195,13 @@ a[href^="tel:"]:before {
 .coming-soon:before {
   content: "coming soon";
   background-color: var(--color-alert-success);
-} */
+}
 
 .menu-item a:before {
   content: initial;
 }
 
-/* .page-section>h3, .page-section>h2, h3.page-section, h2.page-section {
+ .page-section>h3, .page-section>h2, h3.page-section, h2.page-section {
   text-transform: uppercase;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -299,7 +299,7 @@ ul.nav.nav-tabs {
 
 /* Tables */
 
-.table>tbody>tr>th {
+/* .table>tbody>tr>th {
   color: #2A5135 !important;
 }
 
@@ -320,7 +320,7 @@ ul.nav.nav-tabs {
 
 .table-hover>tbody>tr:hover {
   background-color: #f5f5f5;
-}
+} */
 
 .contact-entry div:hover {
   background-color: #fff;
@@ -355,6 +355,7 @@ div.break {
   list-style: none !important;
 }
 
+/*
 .btn {
   padding: 8px 16px;
   min-width: 88px;
@@ -365,14 +366,15 @@ div.break {
   line-height: 1.4em;
   white-space: initial;
   /*   font-family: "prox-semibold", "Helvetica", "Arial", sans-serif; */
-  font-weight: 500;
-  border-radius: 2px;
-  text-transform: uppercase;
-  border: none;
-  color: rgba(0, 0, 0, 0.87);
-  box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.2), 0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 3px 1px -2px rgba(0, 0, 0, 0.12);
-  background-color: #e0e0e0;
-  border-bottom: none !important;
+
+font-weight: 500;
+border-radius: 2px;
+text-transform: uppercase;
+border: none;
+color: rgba(0, 0, 0, 0.87);
+box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.2), 0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 3px 1px -2px rgba(0, 0, 0, 0.12);
+background-color: #e0e0e0;
+border-bottom: none !important;
 }
 
 .btn:hover, .btn: active {
@@ -394,7 +396,7 @@ div.break {
   color: #fff;
 }
 
-textarea, select, input[type="text"], input[type="password"], input[type="email"], input[type="file"], input[type="color"], input[type="date"], input[type="datetime"], input[type="datetime-local"], input[type="month"], input[type="number"], input[type="range"], input[type="search"], input[type="tel"], input[type="time"], input[type="url"], input[type="week"] {
+*/ textarea, select, input[type="text"], input[type="password"], input[type="email"], input[type="file"], input[type="color"], input[type="date"], input[type="datetime"], input[type="datetime-local"], input[type="month"], input[type="number"], input[type="range"], input[type="search"], input[type="tel"], input[type="time"], input[type="url"], input[type="week"] {
   background-color: #fff !important;
 }
 
@@ -510,7 +512,7 @@ textarea, select, input[type="text"], input[type="password"], input[type="email"
   border-left-color: var(--color-alert-danger);
 } */
 
-/* 
+/*
 .paper {
   background: white;
   padding: 16px;
